<resources>
    <string name="app_name">Google Maps and Weather</string>
    <string name="user_name_label">User Name</string>
    <string name="user_name" />
    <string name="password_label">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="first_name" />
    <string name="last_name" />
    <string name="userName_label">User Name</string>
    <string name="rstpassword_label">Password</string>
    <string name="rstConfirmPassword_label">Confirm Password</string>
    <string name="rstRegister">Register</string>
    <string name="rd_male">Male</string>
    <string name="rd_female">Female</string>
    <string name="seek_bar_text">Text View</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logOut">Log Out</string>
    <string name="location_name_label">Name of location</string>
    <string name="address">Address</string>
    <string name="location_colon">:</string>
    <string name="back">Go Back</string>
    <string name="action_Location">Locatons</string>
    <string name="location_name_title">Locations</string>
    <string name="test">test</string>
    <string name="weather_title">Weather</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="gget_weather_conditions">Get Weather Conditions</string>
    <string name="weather_temperature">Teamperature</string>
    <string name="go_Location">Location</string>
    <string name="go_Weather">Weather</string>
    <string name="action_Weather">Weather</string>
</resources>