<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.on.conestogac.navjot.assignment1.LocationActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Bill Amount-->
        <TextView
            android:id="@+id/locationNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/location_name_title"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/locationNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationNameTitle"
            android:padding="2dp"
            android:text="@string/location_name_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/locationNameLabel"

            android:layout_toRightOf="@+id/locationNameLabel"
            android:padding="10dp"
            android:text="@string/location_colon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/colon"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/colon"
            android:ems="8"
            android:inputType="text"
            android:text="@string/address"
            android:textSize="20sp" />
        <Button
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/locationNameLabel"
            android:text="@string/back"
            android:textSize="15sp"
            android:onClick="goBack"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
